--- a/ex04/pom.xml
+++ b/ex04/pom.xml
@@ -7,15 +7,65 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>ex04 Maven Webapp</name>
   <url>http://maven.apache.org</url>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+       <groupId>log4j</groupId>
+       <artifactId>log4j</artifactId>
+       <version>1.2.17</version>
+   </dependency>
+   <!-- 로컬 레지포지토리에 ojdbc14-10.2.0.4.0.jar붙여넣기 -->
+   <dependency>
+   <groupId>com.oracle</groupId>
+   <artifactId>ojdbc14</artifactId>
+   <version>10.2.0.4.0</version>
+   </dependency>
+<!-- https://mvnrepository.com/artifact/taglibs/standard -->
+<dependency>
+    <groupId>taglibs</groupId>
+    <artifactId>standard</artifactId>
+    <version>1.1.2</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/jstl/jstl -->
+<dependency>
+    <groupId>jstl</groupId>
+    <artifactId>jstl</artifactId>
+    <version>1.2</version>
+</dependency>
+
+   
+   
   </dependencies>
+   <repositories>
+      <!-- ojdbc14 설정시 --> 
+      <repository>
+         <id>mesir-repo</id>
+         <url>http://mesir.googlecode.com/svn/trunk/mavenrepo</url>
+      </repository>
+           <!-- ojdbc6 설정시 --> 
+      <repository>
+         <id>codelds</id>
+         <url>https://code.lds.org/nexus/content/groups/main-repo</url>
+      </repository>
+   </repositories>
   <build>
     <finalName>ex04</finalName>
+    <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.3</version>
+      <configuration>
+        <source>1.7</source>
+        <target>1.7</target>
+      </configuration>
+    </plugin>
+  </plugins>
   </build>
 </project>
