--- a/ex05/.project
+++ b/ex05/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>22223</name>
+	<name>ex05</name>
 	<comment></comment>
 	<projects>
 	</projects>
